pkg/resourceinterpreter/default/thirdparty/resourcecustomizations/kyverno.io/v1/ClusterPolicy/testdata/observed-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sample
spec:
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Namespace
    name: require-ns-purpose-label
    validate:
      message: You must have label `purpose` with value `production` set on all new
        namespaces.
      pattern:
        metadata:
          labels:
            purpose: production
  validationFailureAction: Enforce
status:
  autogen: {}
  conditions:
  - lastTransitionTime: "2023-05-07T12:28:58Z"
    message: ""
    reason: Succeeded
    status: "True"
    type: Ready
  ready: true
  rulecount:
    generate: 0
    mutate: 0
    validate: 1
    verifyimages: 0
